@@ -1,6 +1,7 @@
 
 2.0.11 released
 
+	* validate add_torrent_params::save_path at run-time
 	* use stricter rules for what filenames are valid on Android
 	* fix applying IP filter to DHT traffic (HanabishiRecca)
 	* fix race condition when cancelling requests after becoming a seed
